--- a/index.html
+++ b/index.html
@@ -3,12 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Kids-School</title>
     <link rel="stylesheet" href="styles/style.css">
-
 </head>
-<body>
-    
+
+<body class="quicksand-font">
+    <header>
+        <div class="top-portion display-flex">
+            <div class="logo-part display-flex">
+                <div>
+                    <img src="assets/logo.png" alt="">
+                </div>
+                <h2> SCHOOL</h2>
+            </div>
+            <nav class="navbar">
+                <ul class="display-flex">
+                    <li class="nav-item"><a class="nav-link orange" href="">Home</a></li>
+                    <li class="nav-item"><a class="nav-link sky-blue" href="">About</a></li>
+                    <li class="nav-item"><a class="nav-link cyan2" href="">Facilities</a></li>
+                    <li class="nav-item"><a class="nav-link purple2" href="">Admission</a></li>
+                </ul>
+            </nav>
+            <button class="btn-primary btn-contact">Contact</button>
+        </div>
+
+        <div class="hero">
+            <div class="text">
+                <h1> <span class="orange">Empowering</span> <br>
+                    students from small age <span class="skyblue">towards vision</span></h1>
+                <p>With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="btn-primary">Enroll Now</button>
+            </div>
+            <div class="photo">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+        </div>
+    </header>    
 </body>
 </html>
