Responsive top and Header Section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body class="quicksand-font">
-    <header>
+
+    <section class="top-section">
         <div class="top-portion display-flex">
             <div class="logo-part display-flex">
-                <div>
+                <div class="photo">
                     <img src="assets/logo.png" alt="">
                 </div>
                 <h2> SCHOOL</h2>
@@ -26,19 +27,24 @@
                 </ul>
             </nav>
             <button class="btn-primary btn-contact">Contact</button>
+            <div class="mobile-nav">
+                <img src="assets/list.png" alt="">
+            </div>
         </div>
-
-        <div class="hero">
+    </section>
+    
+    <header>
+        <section class="hero">
             <div class="text">
                 <h1> <span class="orange">Empowering</span> <br>
                     students from small age <span class="skyblue">towards vision</span></h1>
-                <p>With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
                 <button class="btn-primary">Enroll Now</button>
             </div>
             <div class="photo">
                 <img src="assets/hero-kids.png" alt="">
             </div>
-        </div>
+        <section>
     </header>    
 </body>
 </html>
