Responsive Standard Curriculum

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </section>
     
-    <header class="hide">
+    <header>
         <section class="hide hero">
             <div class="text">
                 <h1> <span class="orange">Empowering</span> <br>
@@ -83,6 +83,6 @@
             </div>
         </section>
     </main>
-    
+
 </body>
 </html>
