Added Marque Tag ready for submission

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </section>
     
     <header>
+        <marquee width="90%" direction="left" behavior="scroll" scrollamount="5">
+            Admission going on. 50% discount till 31st January 2025! Hurry up! Admission going on. 50% discount till 31st January 2025! Hurry up!
+        </marquee>
         <section class="hero">
             
             <div class="text">
